--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <title>RANDOM -- test</title>
+    <meta property="og:image" content="./">
+    <meta property="og:image" content="./">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" type="text/css" href="./container.css">
-
     <link rel="stylesheet" type="text/css" href="./form.css">
     <script defer src="./script.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <form class="container__form container__form--js">
+        <!-- <form class="container__form container__form--js"> -->
             <fieldset>
-                <legend>WYLOSUJ CYFRĘ OD 1 DO 10</legend>
+                <legend>WYLOSUJ 6 Cyfr od 1 do 10</legend>
                 <button class="form__button form__button--js">wylosuj</button>
                 <p class="form_resultLottery--js"></p>
             </fieldset>
-        </form>
+        <!-- </form> -->
     </div>
     <footer>&copy; Adrian Kolano 2020.</footer>
 </body>
