--- a/index.html
+++ b/index.html
@@ -23,10 +23,27 @@
         <!-- <form class="container__form container__form--js"> -->
             <fieldset>
                 <legend>WYLOSUJ 6 Cyfr od 1 do 10</legend>
+                <form class="conteiner_form">
+                    <input class="input input1 ">
+                    <input class="input input2 ">
+                    <input class="input input3">
+                    <input class="input input4">
+                    <input class="input input5 ">
+                    <input class="input input6">
+                   
+                </form>
                 <button class="form__button form__button--js">wylosuj</button>
                 <p class="form_resultLottery--js"></p>
             </fieldset>
-        <!-- </form> -->
+    
+            <span class="container_span">
+                <div class="bool1"></div>
+                <div class="bool2"></div>
+                <div class="bool3"></div>
+                <div class="bool4"></div>
+                <div class="bool5"></div>
+                <div class="bool6"></div>
+            </span>
     </div>
     <footer>&copy; Adrian Kolano 2020.</footer>
 </body>
