--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <fieldset>
                 <legend>WYLOSUJ 6 Cyfr od 1 do 10</legend>
                 <form class="conteiner_form">
-                    <input class="input input1 ">
-                    <input class="input input2 ">
-                    <input class="input input3">
-                    <input class="input input4">
-                    <input class="input input5 ">
-                    <input class="input input6">
+                    <input class="input input1" value="" placeholder="nr">
+                    <input class="input input2" value="" placeholder="nr">
+                    <input class="input input3" value="" placeholder="nr">
+                    <input class="input input4" value="" placeholder="nr">
+                    <input class="input input5" value="" placeholder="nr">
+                    <input class="input input6" value="" placeholder="nr">
                    
                 </form>
                 <button class="form__button form__button--js">wylosuj</button>
@@ -37,7 +37,7 @@
             </fieldset>
     
             <span class="container_span">
-                <div class="bool1"></div>
+                <div  class="bool1"  ></div>
                 <div class="bool2"></div>
                 <div class="bool3"></div>
                 <div class="bool4"></div>
