added event in js and few changes in html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <!-- <form class="container__form container__form--js"> -->
         <fieldset class="container_fieldset">
             <legend>WYLOSUJ 6 Cyfr od 1 do 49</legend>
-            <form class="conteiner_form" required >
+            <form class="conteiner_form"  >
                 <input type="number" autofocus required class="input input1" value="" placeholder="0">
-                <input type="number"  required class="input input2" value="" placeholder="0">
+                <input type="number" required class="input input2" value="" placeholder="0">
                 <input type="number" required class="input input3" value="" placeholder="0">
                 <input type="number" required class="input input4" value="" placeholder="0">
                 <input type="number" required class="input input5" value="" placeholder="0">
@@ -40,12 +40,12 @@
         </fieldset>
 
         <span class="container_span">
-            <div class="bool1"></div>
-            <div class="bool2"></div>
-            <div class="bool3"></div>
-            <div class="bool4"></div>
-            <div class="bool5"></div>
-            <div class="bool6"></div>
+            <div class="bool1">13</div>
+            <div class="bool2">8</div>
+            <div class="bool3">49</div>
+            <div class="bool4">7</div>
+            <div class="bool5">31</div>
+            <div class="bool6">29</div>
         </span>
     </div>
     <footer>&copy; Adrian Kolano 2020.</footer>
